--- a/android/Lexithymia/app/src/main/res/values/strings.xml
+++ b/android/Lexithymia/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Lexithymia</string>
+    <string name="action_favorite">af</string>
+    <string name="action_settings">as</string>
     <string-array name="friends">
         <item>John</item>
         <item>Bill</item>
@@ -11,6 +13,7 @@
         <item>Tired</item>
     </string-array>
     <string-array name="feelingsGroup">
+        <item>Plutchik</item>
         <item>Seligman</item>
         <item>Ekman</item>
         <item>You</item>
